crates/mecojoni-core/tests/fixtures/invalid/body-guard-order.meco
---
meco: 1
module: invalid
---

# arrival
- {common.name as hero}
  {mood is tense}
  Hello, $hero.
